refactor: update mariadb config template

--- a/roles/mariadb/templates/50-server.cnf.j2
+++ b/roles/mariadb/templates/50-server.cnf.j2
@@ -5,6 +5,7 @@ datadir         = {{ mariadb_data_dir }}
 log-error       = {{ mariadb_log_dir }}/error.log
 
 bind-address    = {{ mariadb_bind_address }}
+port            = {{ mariadb_port }}
 
 # Basic settings
 max_connections = {{ mariadb_max_connections }}
